--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,8 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
-<link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v27.0.1/dist/font-face.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{% static 'styles/main.min.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/blog.min.css' %}">
 </head>
 <body>
 
@@ -16,7 +15,8 @@
 
 {% block footer %}{% endblock footer %}
 
-<script src="{% static 'scripts/scripts.js' %}"></script>
-
+<script src="{% static 'scripts/jquery.js' %}"></script>
+<script src="{% static 'scripts/bootstrap.bundle.js' %}"></script>
+<script src="{% static 'scripts/blog.js' %}"></script>
 </body>
 </html>
