--- a/blog/templates/dashboard/base.html
+++ b/blog/templates/dashboard/base.html
@@ -7,9 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/dashboard.min.css' %}">
 </head>
-<body>
+<body class="{% block body_class %}{% endblock body_class %}">
 
 {% block body %}{% endblock body %}
 
@@ -18,6 +19,11 @@
 <script src="{% static 'scripts/jquery.js' %}"></script>
 <script src="{% static 'scripts/bootstrap.bundle.js' %}"></script>
 <script src="{% static 'scripts/trumbowyg.js' %}"></script>
+<script src="{% static 'scripts/feather.js' %}"></script>
 <script src="{% static 'scripts/dashboard.js' %}"></script>
+
+<script>
+    feather.replace()
+</script>
 </body>
 </html>
