--- a/blog/assets/dashboard/styles/partials/header.scss
+++ b/blog/assets/dashboard/styles/partials/header.scss
@@ -6,8 +6,9 @@
 		padding-bottom: .75rem;
 		font-size: 1rem;
 		background-color: #08090A;
-		color: #E6BF3C;
-		font-weight: 700;
+		color: #F8BD7F;
+		font-weight: 400;
+		letter-spacing: .1rem;
 
 		span {
 			vertical-align: middle;
