--- a/blog/templates/dashboard/layouts/login.html
+++ b/blog/templates/dashboard/layouts/login.html
@@ -7,16 +7,20 @@
 {% block body_class %}dashboard login{% endblock %}
 
 {% block body %}
-    <form class="form-signin" action="{% url 'blog:dsh_login' %}" method="post">
+    <form class="form-signin" action="{% url 'blog:login' %}" method="post">
         {% csrf_token %}
-
-        {% for field in form %}
-            <div class="form-group">
+        <div class="text-center mb-4">
+            <a href="{% url 'blog:homepage' %}"><img class="mb-3" src="{% static 'images/samurai-baboon-login.png' %}" width="100" height="100" alt="samurai baboon login"></a>
+        </div>
+        <div class="form-group shadow">
+            <h3>Login</h3>
+            {% for field in form %}
                 <label for="{{ form.subject.id_for_label }}" class="label">{{ field.label_tag }}</label>
                 {{ field }}
-            </div>
-        {% endfor %}
-{{ form.errors }}
-        <input class="btn btn-lg btn-dark btn-block" type="submit" value="Login" />
+            {% endfor %}
+            <br>
+            <button type="submit" class="btn btn-lg btn-dark btn-block">Login <i data-feather="arrow-right"></i></button>
+        </div>
+        <a href="{% url 'blog:homepage' %}" class="back-to-home">Back to Home</a>
     </form>
 {% endblock body %}
