init contact form

--- a/blog/assets/styles/common/global.scss
+++ b/blog/assets/styles/common/global.scss
@@ -1,1 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 
+body {
+  padding-top: 3.4rem;
+  margin-bottom: 150px;
+  font-family: 'Vazir', sans-serif !important;
+  background-color: #121212;
+}
