--- a/contact/templates/contact/includes/navbar.html
+++ b/contact/templates/contact/includes/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar__baboon navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'blog:homepage' %}">
+        <a class="navbar-brand" href="#">
             <img src="{% static 'images/baboon-samurai-logo.png' %}" width="28" height="28" class="d-inline-block align-top" alt="">
             baboon
         </a>
@@ -13,13 +13,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'blog:homepage' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact:contact' %}">Contact</a>
+                    <a class="nav-link" href="{% url 'blog:contact' %}">Contact</a>
                 </li>
             </ul>
 
