--- a/dashboard/templates/dashboard/layouts/posts.html
+++ b/dashboard/templates/dashboard/layouts/posts.html
@@ -22,9 +22,9 @@
                                     <i data-feather="clock"></i> {{ post.published_at|date }}
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title"><a href="{% url 'blog:post-edit' post.pk %}">{{ post.title }}</a></h5>
+                                    <h5 class="card-title"><a href="{% url 'dashboard:post-edit' post.pk %}">{{ post.title }}</a></h5>
                                     <p class="card-text">{{ post.excerpt }}</p>
-                                    <a href="{% url 'blog:post-edit' post.pk %}" class="btn btn-warning btn-sm">Update Post</a>
+                                    <a href="{% url 'dashboard:post-edit' post.pk %}" class="btn btn-warning btn-sm">Update Post</a>
                                 </div>
                             </div>
                         {% empty %}
