--- a/blog/templates/blog/includes/footer.html
+++ b/blog/templates/blog/includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer py-5">
     <div class="container">
-        <span>COPYRIGHT &copy; 2020 | MOXART</span>
+        <span>COPYRIGHT &copy; 2020 | <a href="https://moxart.ir/" target="_blank">Moxart</a></span>
     </div>
 </footer>
