--- a/blog/assets/styles/components/post.scss
+++ b/blog/assets/styles/components/post.scss
@@ -3,11 +3,39 @@ div.post__card {
 
   .post__title {
     font-size: 2em;
-    color: #c19e74;
+    color: #3C4650;
     font-weight: 700;
     max-width: 100%;
     padding-left: 5%;
     padding-top: 3%;
+
+    a {
+      &:hover,
+      &:focus {
+        text-decoration: none;
+      }
+    }
+  }
+
+  div.post__meta {
+    display: flex;
+    font-size: .9375rem;
+    margin-bottom: 1rem;
+    padding-left: 5%;
+
+    div.author {
+      margin-right: 1rem;
+      text-transform: capitalize;
+      a {
+        color: #ddd !important;
+
+        &:hover,
+        &:focus {
+          text-decoration: none;
+          color: #ccc !important;
+        }
+      }
+    }
   }
 
   .post__excerpt {
@@ -25,5 +53,40 @@ div.post__card {
     padding-left: 5%;
     font-style: italic;
     padding-top: 3%;
+  }
+}
+
+div.post__single {
+  font-size: 1.25rem;
+  line-height: 1.68;
+
+  div.content {
+    padding: 1rem;
+    background-image: linear-gradient(to bottom, #191a1f, #18191d, #16171c, #15161a, #131419);
+    border-radius: 6px;
+  }
+
+  div.page__header {
+    h3 {
+      font-size: 2.5rem;
+      text-align: center;
+      color: #9e9e9e;
+    }
+  }
+
+  div.post__meta {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: .9375rem;
+    margin-bottom: 3rem;
+
+    div.author {
+      margin-right: 1rem;
+      text-transform: capitalize;
+      a {
+        color: #c19e74;
+      }
+    }
   }
 }
