--- a/blog/templates/blog/includes/navbar.html
+++ b/blog/templates/blog/includes/navbar.html
@@ -15,17 +15,24 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'blog:homepage' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact:contact' %}">Contact</a>
-                </li>
+                {% if categories %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Category
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% for category in categories %}
+                                <a class="dropdown-item" href="{% url 'blog:post-category' category.slug %}">{{ category.title|capfirst }}</a>
+                            {% endfor %}
+                        </div>
+                    </li>
+                {% endif %}
             </ul>
 
             {% if user.is_authenticated %}
                 <a href="{% url 'dashboard:logout' %}" class="btn btn__logout">Logout</a>
             {% else %}
+                <a href="{% url 'contact:contact' %}" class="btn btn__contact mr-2">Contact</a>
                 <a href="{% url 'dashboard:login' %}" class="btn btn__login">Login</a>
             {% endif %}
         </div>
