--- a/blog/assets/styles/common/variables.scss
+++ b/blog/assets/styles/common/variables.scss
@@ -1,2 +1,5 @@
 $link-color: #c19e74 !important;
-$link-hover-color: #aa8c68 !important;;
+$link-hover-color: #aa8c68 !important;
+$dropdown-link-active-bg: tranparent;
+$dropdown-bg: #212121 !important;
+$dropdown-link-hover-bg: #222222 !important;
