--- a/blog/assets/styles/components/post.scss
+++ b/blog/assets/styles/components/post.scss
@@ -1,15 +1,38 @@
+@media (max-width: 575.98px) {
+  div.post__card {
+    .post__title {
+      line-height: 2.3rem;
+    }
+  }
+
+  div.post__single {
+    div.page__header {
+      h3 {
+        font-size: 2rem !important;
+        line-height: 2.5rem;
+      }
+    }
+    div.content {
+      background-color: transparent !important;
+      padding: 0 !important;
+      border-radius: 0;
+    }
+  }
+}
+
 div.post__card {
   margin: 5rem 0;
 
   .post__title {
     font-size: 2em;
-    color: #3C4650;
     font-weight: 700;
     max-width: 100%;
     padding-left: 5%;
     padding-top: 3%;
 
     a {
+      color: #9e9e9e !important;
+
       &:hover,
       &:focus {
         text-decoration: none;
@@ -20,7 +43,7 @@ div.post__card {
   div.post__meta {
     display: flex;
     font-size: .9375rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     padding-left: 5%;
 
     div.author {
@@ -41,7 +64,7 @@ div.post__card {
   .post__excerpt {
     font-size: 1.1em;
     font-weight: 300;
-    color: #9e9e9e;
+    color: #707070;
     padding-left: 5%;
     padding-top: 1%;
   }
@@ -59,10 +82,11 @@ div.post__card {
 div.post__single {
   font-size: 1.25rem;
   line-height: 1.68;
+  color: #9e9e9e;
 
   div.content {
+    background-color: #111;
     padding: 1rem;
-    background-image: linear-gradient(to bottom, #191a1f, #18191d, #16171c, #15161a, #131419);
     border-radius: 6px;
   }
 
@@ -79,7 +103,7 @@ div.post__single {
     justify-content: center;
     text-align: center;
     font-size: .9375rem;
-    margin-bottom: 3rem;
+    margin: 2rem;
 
     div.author {
       margin-right: 1rem;
