--- a/blog/assets/styles/partials/header.scss
+++ b/blog/assets/styles/partials/header.scss
@@ -38,8 +38,7 @@
   }
 
   .btn__logout {
-    background-color: #E84855;
-    color: #ddd !important;
+    background-color: #212121;
     font-size: 1rem;
     font-weight: 100;
     letter-spacing: 1px;
