--- a/blog/templates/blog/includes/navbar.html
+++ b/blog/templates/blog/includes/navbar.html
@@ -28,13 +28,14 @@
                     </li>
                 {% endif %}
             </ul>
-
-            {% if user.is_authenticated %}
-                <a href="{% url 'dashboard:logout' %}" class="btn btn__logout">Logout</a>
-            {% else %}
-                <a href="{% url 'contact:contact' %}" class="btn btn__contact mr-2">Contact</a>
-                <a href="{% url 'dashboard:login' %}" class="btn btn__login">Login</a>
-            {% endif %}
+            <div class="buttons my-2 my-lg-0">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'dashboard:logout' %}" class="btn btn__logout">Logout</a>
+                {% else %}
+                    <a href="{% url 'contact:contact' %}" class="btn btn__contact">Contact</a>
+                    <a href="{% url 'dashboard:login' %}" class="btn btn__login">Login</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </nav>
