--- a/dashboard/templates/dashboard/layouts/post_update.html
+++ b/dashboard/templates/dashboard/layouts/post_update.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-8 col-lg-6 pt-6">
-                        <form method="post">
+                        <form method="post" enctype="multipart/form-data">
                             {% csrf_token %}
 
                             {% for field in form %}
