:triangular_flag_on_post: init pagination

--- a/blog/assets/styles/common/variables.scss
+++ b/blog/assets/styles/common/variables.scss
@@ -3,3 +3,6 @@ $link-hover-color: #aa8c68 !important;
 $dropdown-link-active-bg: tranparent;
 $dropdown-bg: #212121 !important;
 $dropdown-link-hover-bg: #222222 !important;
+$pagination-active-bg: #222222 !important;
+$pagination-border-color: transparent !important;
+$pagination-focus-box-shadow: none !important;
