init media uploader

--- a/dashboard/templates/dashboard/includes/sidebar.html
+++ b/dashboard/templates/dashboard/includes/sidebar.html
@@ -31,6 +31,12 @@
             </a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'dashboard:media-upload-list' %}">
+                <i data-feather="hard-drive"></i>
+                Media
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'dashboard:users' %}">
                 <i data-feather="users"></i>
                 Users
