--- a/dashboard/assets/styles/common/variables.scss
+++ b/dashboard/assets/styles/common/variables.scss
@@ -1,2 +1,8 @@
 $link-color: #444;
 $link-hover-color: #333;
+$dropdown-link-active-bg: tranparent;
+$dropdown-bg: #212121 !important;
+$dropdown-link-hover-bg: #222222 !important;
+$pagination-active-bg: #222222 !important;
+$pagination-border-color: transparent !important;
+$pagination-focus-box-shadow: none !important;
