--- a/dashboard/templates/dashboard/layouts/categories.html
+++ b/dashboard/templates/dashboard/layouts/categories.html
@@ -14,11 +14,16 @@
                 <div class="page-header mb-5">
                     <h1 class="h2"> <i data-feather="folder"></i> Categories</h1>
                 </div>
+
+                 <div class="row">
+                    <div class="col-sm-12 col-md-8 col-lg-6 pt-6">
+                        <a href="{% url 'dashboard:category-create' %}" class="btn btn-primary mb-3">Create New</a>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-sm-12 col-md-8 col-lg-6 pt-6">
                         {% if category_list %}
-                            <a href="{% url 'dashboard:category-create' %}" class="btn btn-primary mb-3">Create New</a>
-
                             {% for cat in category_list %}
                                 <a href="{% url 'dashboard:category-edit' cat.pk %}" class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
