--- a/blog/assets/styles/components/post.scss
+++ b/blog/assets/styles/components/post.scss
@@ -84,6 +84,10 @@ div.post__single {
   line-height: 1.68;
   color: #9e9e9e;
 
+  img {
+    width: 100%;
+  }
+
   div.content {
     background-color: #111;
     padding: 1rem;
