--- a/dashboard/templates/dashboard/layouts/categories.html
+++ b/dashboard/templates/dashboard/layouts/categories.html
@@ -17,7 +17,7 @@
 
                  <div class="row">
                     <div class="col-sm-12 col-md-8 col-lg-6 pt-6">
-                        <a href="{% url 'dashboard:category-create' %}" class="btn btn-primary mb-3">Create New</a>
+                        <a href="{% url 'dashboard:category-create' %}" class="btn btn-dark mb-3">Create New</a>
                     </div>
                 </div>
 
