add prismjs plugin

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,5 +19,6 @@
 <script src="{% static 'scripts/jquery.js' %}"></script>
 <script src="{% static 'scripts/bootstrap.bundle.js' %}"></script>
 <script src="{% static 'scripts/blog.js' %}"></script>
+<script src="{% static 'scripts/prism.js' %}"></script>
 </body>
 </html>
