--- a/blog/assets/styles/blog.scss
+++ b/blog/assets/styles/blog.scss
@@ -3,7 +3,7 @@
 @import "bootstrap-scss/bootstrap";
 
 @import "common/global";
-
+@import "vendors/prism";
 @import "components/index";
 
 @import "partials/header";
