--- a/dashboard/templates/dashboard/includes/sidebar.html
+++ b/dashboard/templates/dashboard/includes/sidebar.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'dashboard:tag-list' %}">
                 <i data-feather="tag"></i>
                 Tags
             </a>
