--- a/blog/assets/styles/common/global.scss
+++ b/blog/assets/styles/common/global.scss
@@ -4,14 +4,11 @@ html {
 }
 
 body {
-  padding-top: 5rem;
+  padding-top: 9rem;
   margin-bottom: 150px;
-  font-family: 'Vazir', sans-serif !important;
-  background-color: #121212;
-  color: #9e9e9e;
 }
 
-::selection {
-  background-color: #888;
-  color: #ddd;
+a {
+  outline: none !important;
+  box-shadow: none !important;
 }
