--- a/blog/assets/styles/common/variables.scss
+++ b/blog/assets/styles/common/variables.scss
@@ -1,8 +1,10 @@
-$link-color: #c19e74 !important;
-$link-hover-color: #aa8c68 !important;
+$link-color: #555555 !important;
+$link-hover-color: #555555 !important;
 $dropdown-link-active-bg: tranparent;
-$dropdown-bg: #212121 !important;
-$dropdown-link-hover-bg: #222222 !important;
+$dropdown-bg: #0A0908 !important;
+$dropdown-link-hover-bg: #dddddd !important;
+$dropdown-link-hover-color: #444444 !important;
+$dropdown-link-hover-bg: #0A0908 !important;
 $pagination-active-bg: #222222 !important;
 $pagination-border-color: transparent !important;
 $pagination-focus-box-shadow: none !important;
