--- a/blog/assets/styles/components/post.scss
+++ b/blog/assets/styles/components/post.scss
@@ -21,17 +21,21 @@
 }
 
 div.post__card {
-  margin: 5rem 0;
+  margin-bottom: 5rem;
+
+  img {
+    border-radius: 1.5rem;
+  }
 
   .post__title {
-    font-size: 2em;
+    font-size: 1.5rem;
     font-weight: 700;
     max-width: 100%;
     padding-left: 5%;
     padding-top: 3%;
 
     a {
-      color: #9e9e9e !important;
+      color: #292929 !important;
 
       &:hover,
       &:focus {
@@ -42,7 +46,7 @@ div.post__card {
 
   div.post__meta {
     display: flex;
-    font-size: .9375rem;
+    font-size: .8375rem;
     margin: 1rem 0;
     padding-left: 5%;
 
@@ -50,67 +54,63 @@ div.post__card {
       margin-right: 1rem;
       text-transform: capitalize;
       a {
-        color: #ddd !important;
+        color: rgba(41, 41, 41, 1);
+      }
 
-        &:hover,
-        &:focus {
-          text-decoration: none;
-          color: #ccc !important;
-        }
+      time {
+        color: rgba(117, 117, 117, 1);
       }
     }
   }
 
   .post__excerpt {
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: 300;
-    color: #707070;
     padding-left: 5%;
     padding-top: 1%;
-  }
-
-  .post__tags {
-    font-size: 1.1em;
-    font-weight: 300;
-    color: #333;
-    padding-left: 5%;
-    font-style: italic;
-    padding-top: 3%;
+    color: #555;
   }
 }
 
 div.post__single {
   font-size: 1.25rem;
   line-height: 1.68;
-  color: #9e9e9e;
+
+  section.post__thumbnail {
+    img {
+      border-radius: 1.5rem;
+    }
+  }
 
   div.content {
-    background-color: #111;
     padding: 1rem;
     border-radius: 6px;
+    color: rgba(41, 41, 41, 1);
   }
 
   div.page__header {
     h3 {
-      font-size: 2.5rem;
-      text-align: center;
-      color: #9e9e9e;
+      font-size: 48px !important;
+      font-weight: 400;
+      text-align: left;
+      color: rgba(41, 41, 41, 1);
     }
   }
 
   div.post__meta {
     display: flex;
-    justify-content: center;
-    text-align: center;
+    justify-content: left;
+    text-align: left;
     font-size: .9375rem;
-    margin: 2rem;
 
-    div.author {
-      margin-right: 1rem;
-      text-transform: capitalize;
-      a {
-        color: #c19e74;
-      }
+    margin-right: 1rem;
+    text-transform: capitalize;
+    a {
+      color: rgba(41, 41, 41, 1);
+    }
+
+    time {
+      color: rgba(117, 117, 117, 1);
     }
   }
 }
