--- a/blog/templates/blog/includes/footer.html
+++ b/blog/templates/blog/includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer py-5">
-    <div class="container">
-        <span>COPYRIGHT &copy; 2020 | <a href="https://moxart.ir/" target="_blank">Moxart</a></span>
+    <div class="container justify-content-center text-center">
+        <span>Copyright &copy; 2021 BABOON | All rights reserved | <a href="https://moxart.ir/" target="_blank">MOXART</a></span>
     </div>
 </footer>
