--- a/blog/templates/blog/includes/navbar.html
+++ b/blog/templates/blog/includes/navbar.html
@@ -1,40 +1,41 @@
 {% load static %}
 
-<nav class="navbar__baboon navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'blog:homepage' %}">
-            <img src="{% static 'images/baboon-samurai-logo.png' %}" width="28" height="28" class="d-inline-block align-top" alt="">
-            baboon
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="navbar__baboon navbar navbar-expand-lg  fixed-top">
+    <div class="container">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'blog:homepage' %}">
+                BABOON
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'blog:homepage' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                {% if categories %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Category
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            {% for category in categories %}
-                                <a class="dropdown-item" href="{% url 'blog:post-category' category.slug %}">{{ category.title|capfirst }}</a>
-                            {% endfor %}
-                        </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'blog:homepage' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
-                {% endif %}
-            </ul>
-            <div class="buttons my-2 my-lg-0">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'dashboard:logout' %}" class="btn btn__logout">Logout</a>
-                {% else %}
-                    <a href="{% url 'contact:contact' %}" class="btn btn__contact">Contact</a>
-                    <a href="{% url 'dashboard:login' %}" class="btn btn__login">Login</a>
-                {% endif %}
+                    {% if categories %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Category
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% for category in categories %}
+                                    <a class="dropdown-item" href="{% url 'blog:post-category' category.slug %}">{{ category.title|capfirst }}</a>
+                                {% endfor %}
+                            </div>
+                        </li>
+                    {% endif %}
+                </ul>
+                <div class="buttons my-2 my-lg-0">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'dashboard:logout' %}" class="btn btn__logout">Logout</a>
+                    {% else %}
+                        <a href="{% url 'contact:contact' %}" class="btn btn__contact">Contact</a>
+                        <a href="{% url 'dashboard:login' %}" class="btn btn__login">Login</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
